# skill-cards

./: .gitignore  CONTRIBUTING.md  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
apps/loader/: README.md  package.json  tsconfig.json
apps/loader/src/: consent.ts  grants-cache.ts  index.ts  lib.ts  mcp-mrtr-types.ts  request-state.ts  skill-loader.ts
apps/web/: .cta.json  README.md  package.json
apps/web/src/: routeTree.gen.ts
apps/web/src/components/: Header.tsx
apps/web/src/routes/: index.tsx
apps/web/src/routes/demo/: mcp-todos.tsx
apps/web/src/server/: skills.ts
scripts/: skill-card.sh
skills/cron-analyzer/: Cargo.toml  package.json  skill.json
skills/cron-analyzer/src/: lib.rs
skills/cron-analyzer/ui/: index.html
skills/cron-analyzer/wit/: world.wit
skills/sbom-auditor/: Cargo.toml  package.json  skill.json
skills/sbom-auditor/src/: lib.rs
skills/sbom-auditor/ui/: index.html
skills/sbom-auditor/wit/: world.wit
